--- a/TraiCaTam-Sensor_Turbidity/platformio.ini
+++ b/TraiCaTam-Sensor_Turbidity/platformio.ini
@@ -14,3 +14,5 @@ board = nanoatmega328new
 framework = arduino
 upload_speed = 115200
 monitor_speed = 9600
+lib_deps = 
+	xreef/EByte LoRa E32 library@^1.5.10
