--- a/TraiCaTam-Sensor_Turbidity/platformio.ini
+++ b/TraiCaTam-Sensor_Turbidity/platformio.ini
@@ -8,9 +8,9 @@
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
 
-[env:nanoatmega328new]
-platform = atmelavr
-board = nanoatmega328new
+[env:esp32doit-devkit-v1]
+platform = espressif32
+board = esp32doit-devkit-v1
 framework = arduino
 upload_speed = 115200
 monitor_speed = 9600
