[main] Cho phép nạp code vào mạch nano atmega328P có old bootlboader

--- a/TraiCaTam_Code_v2/platformio.ini
+++ b/TraiCaTam_Code_v2/platformio.ini
@@ -8,11 +8,20 @@
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
 
-[env:nanoatmega328new]
+[env]
 platform = atmelavr
-board = nanoatmega328new
 framework = arduino
-upload_speed = 115200
 monitor_speed = 9600
 lib_deps = 
 	xreef/EByte LoRa E32 library@^1.5.10
+
+[platformio]
+default_envs = nanoatmega328new
+
+[env:nanoatmega328new]
+board = nanoatmega328new
+upload_speed = 115200
+
+[env:nanoatmega328]
+board = nanoatmega328
+upload_speed = 57600
